<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SayaFragment">

    <!-- Foto Profil -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_action_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Tombol untuk upload foto -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUploadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_foto"
        app:layout_constraintBottom_toTopOf="@id/namaTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
        app:icon="@drawable/ic_camera"
        app:iconGravity="start" />

    <!-- Nama -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namaTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namaTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tanggal Lahir -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tanggalLahirTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:endIconContentDescription="@string/image_icon"
        app:endIconDrawable="@drawable/ic_calender"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="date"
            android:hint="@string/tanggal_lahir"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Jenis Kelamin -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jenisKelaminTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tanggalLahirTextInputLayout">

        <AutoCompleteTextView
            android:id ="@+id/jenisKelaminDropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/pilih_jenis_kelamin"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tombol Simpan -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jenisKelaminTextInputLayout"
        app:icon="@drawable/ic_save"
        app:iconGravity="start" />

</androidx.constraintlayout.widget.ConstraintLayout>