<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ConstraintLayout inside CardView to manage constraints -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Username Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nama Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namaTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/namaTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tanggal Lahir Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tanggalLahirTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:endIconContentDescription="@string/image_icon"
                app:endIconDrawable="@drawable/ic_calender"
                app:endIconMode="custom"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tanggalLahirEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Jenis Kelamin Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jenisKelaminTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tanggalLahirTextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/jenisKelaminDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/pilih_jenis_kelamin"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Role Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/roleTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/pilih_role"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jenisKelaminTextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/roleDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Register Button -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roleTextInputLayout" />

            <!-- Teks untuk mengarahkan pengguna ke Login -->
            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/link_login"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
